feat: 设置首页信息

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
       name="viewport"
       content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0"
     />
-    <title>vue-pure-admin</title>
-    <link rel="icon" href="/favicon.ico" />
+    <title>onlyy-admin</title>
+    <link rel="icon" href="/favicon.jpg" />
     <script>
       window.process = {};
     </script>
+    <script src="/js/greenSock/TweenMax.min.js"></script>
   </head>
 
   <body>
